<resources>
    <string name="app_name">Chat Match</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="verify_password">Verify password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Log Out</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="zodiac">Select your zodiac sign</string>
    <string name="grad_year">Select your graduation year</string>
    <string name="wave">Welcome &#128075;</string>
    <string name="phone_verify_txt">Tap Continue to get an SMS confirmation Code to help you use Excite</string>
    <string name="phone_code">Enter the 4 digit code sent to your Phone Number</string>
    <string name="code_vals">Didn’t Receive any Code?<br /> Resend Code </string>

    <string name="location">
        <item></item>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name = "exit"><font color="#F54B64">Exit </font></string>
    <string name = "report_another_bug">Report another <font color="#F54B64">Bug </font> </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_s_your_experience_been_with_excite_n_we_would_love_to_hear_your_feedback">How’s your experience been with <font color="#F54B64">Excite </font> </string>
</resources>