<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_signup_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@color/input"
            android:padding="20dp"
            android:inputType="textEmailAddress"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/password_signup_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/input"
            android:padding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="@string/password"
            android:layout_marginBottom="40dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/log_in_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:hint="@string/forgot_password"
            android:padding="20dp"
            android:textStyle="bold"
            android:onClick="logIn"
            android:text="@string/login"/>


        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:hint="@string/forgot_password"
            android:padding="20dp"
            android:textStyle="bold"
            android:onClick="signUp"
            android:text="@string/signup"/>


    </LinearLayout>




</LinearLayout>