<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/email_login_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@color/input"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_login_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@color/input"
            android:padding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="@string/password"
            android:textStyle="bold"/>



<!--        <TextView-->
<!--            android:id="@+id/user_id_textView"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="User ID"-->
<!--            android:textStyle="bold"-->
<!--            android:gravity="center"-->
<!--            android:padding="20dp"-->
<!--            android:textColor="@color/primary"/>-->

        <Button
            android:id="@+id/log_in_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:padding="20dp"
            android:textStyle="bold"
            android:onClick="logIn"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="20dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/primary"/>

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center"-->
<!--            android:text="or"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold"-->
<!--            android:textColor="@color/primary"-->
<!--            android:layout_gravity="center"/>-->

        <Button
            android:id="@+id/sign_up_redirect_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:onClick="signUpRedirect"
            android:padding="20dp"
            android:textAllCaps="false"
            android:text="Create new account"
            android:textStyle="bold" />


    </LinearLayout>




</LinearLayout>